arm64:boot:dts:F+S:fs-osm-mx93: add pinctrl for USB_*_OC
USB_A_OC and USB_B_OC are configured as GPIOs with internal pull-up.
This will provide a stable 1V8 signal for USB_*_OC.

--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dts
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dts
@@ -48,7 +48,7 @@ reg_vlcd: &reg_disp_vdd_en {
     status = "okay";
 };
 IMX93_TOUCH_I2C: &osm_i2c_cam {};
-IMX93_TOUCH_INTERRUPT_GPIO_BANK: &osm_gpio_a25 {};
+IMX93_TOUCH_INTERRUPT_GPIO_BANK: &gpio2 {};
 
 &backlight_ldb {
     pwms = <&gpio_adp 1 5263157 1>;
