--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
@@ -21,17 +21,38 @@
 #define OSM_GPIO_A_4_PIN 13
 #define OSM_GPIO_A_5_PIN 12
 
-&ele_fw2 {
-	memory-region = <&ele_reserved>;
-};
+osm_eth_a: &eqos {};
+osm_eth_b: &fec {};
+osm_uart_con: &lpuart1 {};
+osm_uart_a: &lpuart2 {};
+osm_uart_c: &lpuart3 {};
+osm_uart_d: &lpuart8 {};
+osm_i2c_int: &lpi2c2 {};
+osm_i2c_a: &lpi2c1 {};
+osm_i2c_b: &lpi2c3 {};
+osm_i2c_cam: &lpi2c5 {};
+osm_spi_a: &flexspi1 {};
+osm_spi_b: &lpspi3{};
+osm_usb_a: &usbotg1 {};
+osm_usb_b: &usbotg2 {};
+emmc: &usdhc1 {};
+osm_sdio_a: &usdhc2 {};
+osm_csi: &mipi_csi {};
+osm_dsi: &dsi {};
+osm_dsi_pwm: &tpm5 {};
+osm_pwm_2: &tpm4{};
+osm_pwm_1: &tpm3 {};
+osm_i2s_a: &sai3 {};
+osm_can_a: &flexcan1 {};
+osm_can_b: &flexcan2 {};
 
 / {
 	model = "F+S OSM-SF-MX93";
-	compatible = "fus,imx93-fs-osm-sf-mx93", "fsl,imx93";
+	compatible = "fus,fs-osm-sf-mx93", "fsl,imx93";
 
 	chosen {
 		bootargs = "console=ttyLP0,115200";
-		stdout-path = &lpuart1;
+		stdout-path = &osm_uart_con;
 	};
 
 	aliases {
@@ -42,29 +63,30 @@
 		serial2 = &osm_uart_b;
 		serial3 = &osm_uart_c;
 		serial4 = &osm_uart_d;
-		serial5 = &lpuart4;
-		serial6 = &lpuart6;
-		serial7 = &lpuart7;
-		i2c0 = &lpi2c2;
+		/delete-property/ serial5;
+		/delete-property/ serial6;
+		/delete-property/ serial7;
+		i2c0 = &osm_i2c_int;
 		i2c1 = &osm_i2c_a;
 		i2c2 = &osm_i2c_b;
 		i2c3 = &osm_i2c_cam;
-		i2c4 = &lpi2c4;
+		/delete-property/ i2c4;
+		/delete-property/ i2c5;
+		/delete-property/ i2c6;
+		/delete-property/ i2c7;
 		spi0 = &osm_spi_a;
 		spi1 = &osm_spi_b;
 		usb0 = &osm_usb_a;
 		usb1 = &osm_usb_b;
+		mmc0 = &emmc;
 		mmc1 = &osm_sdio_a;
+		/delete-property/ mmc2;
 		csi0 = &osm_csi; 
-		rtc0 = &bbnsm_rtc;
-		rtc1 = &rtc85263;
-		pwm0 = &osm_pwm_0;
+		rtc0 = &rtc85263;
+		rtc1 = &bbnsm_rtc;
+		pwm0 = &osm_dsi_pwm;
 		pwm1 = &osm_pwm_1;
 		pwm2 = &osm_pwm_2;
-		
-		/* specific */
-		eeprom = &eeprom;
-		rtcpcf85263 = &rtc85263;
 	};
 
 	/* -------------------- BOARD INFO -------------------- */
@@ -266,7 +288,7 @@
 	backlight_ldb: backlight_ldb {
 		compatible = "pwm-backlight";
 		/* example configuration. adaptation may needed */
-		pwms = <&osm_pwm_0 0 100000 PWM_POLARITY_INVERTED>;
+		pwms = <&osm_dsi_pwm 0 100000 PWM_POLARITY_INVERTED>;
 		power-supply = <&reg_disp_bl>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 							 73 92 113 137 163 192 222 255>;
@@ -275,30 +297,20 @@
 	};
 };
 
-&cpu_alert {
-	temperature = <90000>;
-	hysteresis = <2000>;
-};
-
-&cpu_crit {
-	temperature = <105000>;
-	hysteresis = <2000>;
-};
-
 /* UART declerations */
-osm_uart_con: &lpuart1 {
+&osm_uart_con {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
 	status = "okay";
 };
 
-osm_uart_a: &lpuart2 {
+&osm_uart_a {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2>;
 	status = "disabled";
 };
 
-osm_uart_c: &lpuart3 {
+&osm_uart_c {
 #if defined(CONFIG_OSMSFMX93_UARTC)
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
@@ -312,7 +324,7 @@ osm_uart_b: &lpuart5 {
 	status = "disabled";
 };
 
-osm_uart_d: &lpuart8 {
+&osm_uart_d {
 #if defined(CONFIG_OSMSFMX93_UARTD)
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart8>;
@@ -321,7 +333,7 @@ osm_uart_d: &lpuart8 {
 };
 
 /* Ethernet declerations */
-osm_eth_a: &eqos {
+&osm_eth_a {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_eqos>;
 	status = "disabled";
@@ -335,7 +347,7 @@ osm_eth_a: &eqos {
 	};
 };
 
-osm_eth_b: &fec {
+&osm_eth_b {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_fec>;
 	fsl,magic-packet;
@@ -359,31 +371,37 @@ osm_eth_b: &fec {
 		"","";
 };
 
-osm_gpio_a25: &gpio2 {
-#if !defined(CONFIG_OSMSFMX93_UARTD) || !defined(CONFIG_OSMSFMX93_UARTC)
+&gpio1 {
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&pinctrl_gpio1>;
+	pinctrl-1 = <&pinctrl_gpio1>;
+	gpio-line-names = \
+		"","","","","",
+		"","","","","",
+		"USB_A_OC","","","","",
+		"","","","","",
+		"","","","","",
+		"","","","","",
+		"","";
+	status = "okay";
+};
+
+&gpio2 {
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&pinctrl_gpio2>;
 	pinctrl-1 = <&pinctrl_gpio2>;
-#endif
 	status = "okay";
 	gpio-line-names = \
-		"","","","","","","", 
-		"OSM_DISP_EN",
-		"","","","",
-		"OSM_GPIO_A_5",
-		"OSM_GPIO_A_4",
-		"OSM_GPIO_A_3",
-		"OSM_GPIO_A_2",
-		"","",
-		"OSM_USB_B_EN",
-		"OSM_USB_A_EN",
-		"","","","",
-		"OSM_SPI_CS1",
-		"OSM_SDIO_A_WP",
-		"","","","","","";
+		"","","","","",
+		"","","OSM_DISP_EN","","",
+		"","","OSM_GPIO_A_5","OSM_GPIO_A_4","OSM_GPIO_A_3",
+		"OSM_GPIO_A_2","","","OSM_USB_B_EN","OSM_USB_A_EN",
+		"","","","","OSM_SPI_CS1",
+		"OSM_SDIO_A_WP","","USB_B_OC","","",
+		"","";
 };
 
-osm_gpio_a01: &gpio3 {
+&gpio3 {
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&pinctrl_gpio3>;
 	pinctrl-1 = <&pinctrl_gpio3>;
@@ -418,7 +436,7 @@ osm_gpio_a01: &gpio3 {
 };
 
 /* I2C declerations */
-i2c_int: &lpi2c2 {
+&osm_i2c_int {
 	#address-cells = <1>;
 	#size-cells = <0>;
 	pinctrl-names = "default";
@@ -520,7 +538,7 @@ i2c_int: &lpi2c2 {
 	};
 };
 
-osm_i2c_a: &lpi2c1 {
+&osm_i2c_a {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpi2c1>;
 	#address-cells = <1>;
@@ -534,7 +552,7 @@ osm_i2c_a: &lpi2c1 {
 	};
 };
 
-osm_i2c_b: &lpi2c3 {
+&osm_i2c_b {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpi2c3>;
 	#address-cells = <1>;
@@ -542,7 +560,7 @@ osm_i2c_b: &lpi2c3 {
 	status = "disabled";
 };
 
-osm_i2c_cam: &lpi2c5 {
+&osm_i2c_cam {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpi2c5>;
 	#address-cells = <1>;
@@ -551,13 +569,13 @@ osm_i2c_cam: &lpi2c5 {
 };
 
 /* SPI declerations */
-osm_spi_a: &flexspi1 {
+&osm_spi_a {
 	 pinctrl-names = "default";
 	 pinctrl-0 = <&pinctrl_flexspi1>;
 	 status = "disabled";
 };
 
-osm_spi_b: &lpspi3{
+&osm_spi_b{
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpspi3>;
 	status = "disabled";
@@ -565,15 +583,16 @@ osm_spi_b: &lpspi3{
 
 /* USB decleration */
 /* usb dr_mode needs extra configuration */
-osm_usb_a: &usbotg1 {
+&osm_usb_a {
 	vbus-supply = <&reg_usb1_vbus>;
 	disable-over-current;
 	samsung,picophy-pre-emp-curr-control = <3>;
 	samsung,picophy-dc-vol-level-adjust = <7>;
+	
 	status = "disabled";
 };
 
-osm_usb_b: &usbotg2 {
+&osm_usb_b {
 	vbus-supply = <&reg_usb2_vbus>;
 	disable-over-current;
 	samsung,picophy-pre-emp-curr-control = <3>;
@@ -582,27 +601,27 @@ osm_usb_b: &usbotg2 {
 };
 
 /* CAN decleration */
-osm_can_a: &flexcan1 {
+&osm_can_a {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	status = "disabled";
 };
 
-osm_can_b: &flexcan2 {
+&osm_can_b {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	status = "disabled";
 };
 
 /* I2S decleration */
-osm_i2s_a: &sai3 {
+&osm_i2s_a {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sai3>;
 	status = "disabled";
 };
 
 /* SDIO decleration */
-&usdhc1 {
+&emmc {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>;
@@ -616,7 +635,7 @@ osm_i2s_a: &sai3 {
 	status = "okay";
 };
 
-osm_sdio_a: &usdhc2 {
+&osm_sdio_a {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2>;
 	pinctrl-1 = <&pinctrl_usdhc2_100mhz>;
@@ -629,13 +648,13 @@ osm_sdio_a: &usdhc2 {
 
 
 /* MISC */
-osm_csi: &mipi_csi {
+&osm_csi {
 	#address-cells = <1>;
 	#size-cells = <0>;
 	status = "disabled";
 };
 
-osm_dsi: &dsi {
+&osm_dsi {
 	status = "disabled";
 };
 
@@ -643,22 +662,26 @@ osm_dsi: &dsi {
 	status = "disabled";
 };
 
-osm_pwm_0: &tpm5 {
+&osm_dsi_pwm {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_tpm5>;
 	status = "disabled";
 };
 
-osm_pwm_2: &tpm4{
+&osm_pwm_2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_tpm4>;
 	status = "disabled";
 };
 
-osm_pwm_1: &tpm3 {
+&osm_pwm_1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_tpm3>;
 	status = "disabled";
+};
+
+&ele_fw2 {
+	memory-region = <&ele_reserved>;
 };
 
 &epxp {
@@ -721,7 +744,12 @@ osm_pwm_1: &tpm3 {
 		>;
 	};
 
-#if !defined(CONFIG_OSMSFMX93_UARTD) || !defined(CONFIG_OSMSFMX93_UARTC)
+	pinctrl_gpio1: gpio1grp {
+		fsl,pins = <
+			MX93_PAD_PDM_BIT_STREAM1__GPIO1_IO10	0x31e
+		>; 
+	};
+
 	pinctrl_gpio2: gpio2grp {
 		fsl,pins = <
 #if !defined(CONFIG_OSMSFMX93_UARTD)
@@ -732,9 +760,9 @@ osm_pwm_1: &tpm3 {
 			MX93_PAD_GPIO_IO14__GPIO2_IO14			0x31e
 			MX93_PAD_GPIO_IO15__GPIO2_IO15			0x31e
 #endif
+			MX93_PAD_GPIO_IO27__GPIO2_IO27			0x31e
 		>;
 	};
-#endif
 
 	pinctrl_gpio3: gpio3grp {
 		fsl,pins = <
