--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,19 +1,21 @@
 # SPDX-License-Identifier: GPL-2.0
 
-dtb-$(CONFIG_ARCH_MXC) += \
-		soldercore8ulp-bbhd.dtb \
-		picocoremx8ulp.dtb \
-		picocoremx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtb \
-		picocoremx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtb
+# add __symbols__ for label references
+DTC_FLAGS += -@
 
-dtb-$(CONFIG_ARCH_MXC) += \
-		picocoremx93.dtb \
-		picocoremx93-BT070L1060CS0I1AD-A.dtb \
-		picocoremx93-ee0350et-2cp.dtb \
-		picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dtb \
-		picocoremx93-adp-mipi2mip1-ee0350et-2cp.dtb
+# fsimx8ulp
+dtb-$(CONFIG_ARCH_MXC) += soldercore8ulp-bbhd.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx8ulp.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtb
+dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx8ulp-adp-osm-bb.dtb
+dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx8ulp-adp-osm-bb-ee0350et-2cp.dtb
 
-dtb-$(CONFIG_ARCH_MXC) += \
-		fs-osm-sf-mx93-adp-osm-bb.dtb \
-		fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb \
-		fs-osm-sf-mx93-fert2x.dtb
+# fsimx93
+dtb-$(CONFIG_ARCH_MXC) += picocoremx93.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx93-BT070L1060CS0I1AD-A.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx93-ee0350et-2cp.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx93-adp-mipi2mip1-ee0350et-2cp.dtb
+dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx93-adp-osm-bb.dtb
+dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb
