--- a/arch/arm64/boot/dts/F+S/picocoremx8ulp-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8ulp-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -10,4 +10,13 @@
 #define CONFIG_ADP_MIPI2MIPI1_BOARD_REVISION	120
 
 #include "picocoremx8ulp.dts"
+
+adp_i2c: &pc_i2c_b {};
+
 #include "displays/imx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtsi"
+
+&touch {
+    reset-gpios = <&gpiof 23 GPIO_ACTIVE_LOW>;
+	interrupt-parent = <&rp_gpioa>;
+	interrupts = <18 IRQ_TYPE_EDGE_FALLING>;
+};
