--- a/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
@@ -79,9 +79,10 @@
 
 /* Camera on serial MIPI CSI interface */
 //#define CONFIG_FSSMMX8MP_CSI_A
+//#define CONFIG_FSSMMX8MP_CSI_B
 /* Enable Basler da4200 camera */
 //#define CONFIG_FSSMMX8MP_CAMERA_BASLER_daA4200
-#define CONFIG_FSSMMX8MP_CAMERA_BASLER_daA3840
+//#define CONFIG_FSSMMX8MP_CAMERA_BASLER_daA3840
 /* USB Device TypeC and USB Host 2 Type A*/
 #define CONFIG_FSSMMX8MP_USB_OTG
 #define CONFIG_FSSMMX8MP_USB_HOST
