--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx8ulp.dtsi
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx8ulp.dtsi
@@ -14,7 +14,7 @@
 
 /dts-v1/;
 
-#include "../freescale/imx8ulp.dtsi"
+#include "imx8ulp.dtsi"
 #include "fsimx8ulp-rpmsg.dtsi"
 #include <dt-bindings/rtc/pcf85363.h>
 #include <dt-bindings/input/input.h>
