--- a/arch/arm64/boot/dts/F+S/picocoremx8ulp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8ulp.dtsi
@@ -14,7 +14,7 @@
 
 /dts-v1/;
 
-#include "../freescale/imx8ulp.dtsi"
+#include "imx8ulp.dtsi"
 #include "fsimx8ulp-rpmsg.dtsi"
 #include <dt-bindings/rtc/pcf85363.h>
 #include <dt-bindings/input/input.h>
@@ -782,7 +782,7 @@ pc_bl_pwm: &tpm7 {};
 
 	pinctrl_tpm7: tpm7grp {
 		fsl,pins = <
-			MX8ULP_PAD_PTF29__TPM7_CH2
+			MX8ULP_PAD_PTF29__TPM7_CH2	0x40
 		>;
 	};
 
