arm64:boot:dts:F+S: improve fsimx8ulp display dts
- use compatible = "eagleeyetech,ee0350et-2";
- Board Specific IO definition in dts

--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtsi
@@ -63,7 +63,7 @@
 	status = "okay";
 	
 	panel@0 {
-        compatible = "newvision,nv3051d-ee0350et";
+        compatible = "eagleeyetech,ee0350et-2";
         reg = <0>;
 #if CONFIG_ADP_MIPI2MIPI1_BOARD_REVISION == 120
 		reset-gpios = <&max7315 4 GPIO_ACTIVE_LOW>;
