--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx8ulp-adp-osm-bb-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx8ulp-adp-osm-bb-ee0350et-2cp.dts
@@ -25,5 +25,5 @@ adp_i2c: &osm_i2c_cam{};
 &touch {
     reset-gpios = <&rp_gpioc 15 GPIO_ACTIVE_LOW>;
 	interrupt-parent = <&rp_gpioc>;
-	interrupts = <13 IRQ_TYPE_EDGE_FALLING>;
+	interrupts = <13 IRQ_TYPE_LEVEL_LOW>;
 };
