--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-ee0350et-2cp.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-ee0350et-2cp.dtsi
@@ -1,10 +1,17 @@
+// SPDX-License-Identifier: GPL-2.0
 /*
-* Copyright (C) 2024 F&S Elektronik Systeme GmbH
+* Copyright 2024 F&S Elektronik Systeme GmbH
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 2 as
 * published by the Free Software Foundation.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
 */
+
 #ifdef CONFIG_SOLDERCORE8ULP_MIPI_DSI
 
 #include <dt-bindings/pwm/pwm.h>
@@ -34,7 +41,7 @@
 	};
 
 	panel: panel@0 {
-		compatible = "newvision,nv3051d-ee0350et";
+		compatible = "eagleeyetech,ee0350et-2";
 		reg = <0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_dsi>;
