--- a/arch/arm64/boot/dts/F+S/picocoremx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dts
@@ -8,4 +8,11 @@
 
 #define CONFIG_PICOCOREMX8ULP_MIPI_DSI
 #include "picocoremx8ulp.dts"
+reg_vlcd: &reg_vlcd_en {};
 #include "displays/imx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtsi"
+
+&touch {
+	interrupt-parent = <&rp_gpioa>;
+	interrupts = <18 IRQ_TYPE_EDGE_FALLING>;
+	reset-gpios = <&gpio_adp 5 GPIO_ACTIVE_LOW>;
+};
