dts:F+S:picocoremx8ulp: improve Display support

--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtsi
@@ -235,6 +235,7 @@
 	touch: ilitek2130@41 {
 		compatible = "ilitek,ili2130";
 		reg = <0x41>;
+		reset-gpios = <&gpio_adp 5 GPIO_ACTIVE_LOW>;
 	};
 	
 	tc358775@f {
