--- a/arch/arm64/boot/dts/F+S/picocoremx8ulp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8ulp.dtsi
@@ -530,9 +530,12 @@ pc_bl_pwm: &tpm7 {};
 #endif
 	status = "disabled";
 #if defined(CONFIG_PICOCOREMX8ULP_WLAN)
-	enable-sdio-wakeup;
-	cap-power-off-card;
 	fsl,sdio-async-interrupt-enabled;
+	enable-sdio-wakeup;
+	non-removable;
+	keep-power-in-suspend;
+	pm-ignore-notify;
+	cap-power-off-card;
 	#address-cells = <1>;
 	#size-cells = <0>;
 
