Improve pca963x-fus driver
- Rename compatible, so both drivers can be used in parallel
- Fix enable/disable structure to use the pwm_config function

--- a/arch/arm/boot/dts/F+S/picocoremx6ul100.dts
+++ b/arch/arm/boot/dts/F+S/picocoremx6ul100.dts
@@ -775,7 +775,7 @@ wvga {					\
         };
 
 	pca963x: pca9634@61 {
-    	compatible = "nxp,pca9634";
+    	compatible = "fus,pca9634";
         reg = <0x61>;
 		vdd-supply = <&reg_vlcd>;
 		#address-cells = <1>;
