--- a/arch/arm64/boot/dts/F+S/displays/imx8mm-lcdif-adp-mipi2rgb.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mm-lcdif-adp-mipi2rgb.dtsi
@@ -151,7 +151,7 @@
     };
 
 	pca963x: pca9634@61 {
-			compatible = "nxp,pca9634";
+			compatible = "fus,pca9634";
 			reg = <0x61>;
 			nxp,totem-pole;
 			#address-cells = <1>;
