--- a/arch/arm64/boot/dts/F+S/displays/imx8mm-tc358775-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mm-tc358775-BT070L1060CS0I1AD-A.dtsi
@@ -108,7 +108,7 @@
 &IMX8MM_TOUCH_I2C {
 	clock-frequency = <400000>;
 	pca963x: pca9634@61 {
-                        compatible = "nxp,pca9634";
+                        compatible = "fus,pca9634";
                         reg = <0x61>;
 						vdd-supply = <&reg_vlcd>;
                         #address-cells = <1>;
