--- a/arch/arm64/boot/dts/F+S/displays/imx8mp-EE1010B1T-1CP.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mp-EE1010B1T-1CP.dtsi
@@ -84,7 +84,7 @@
 &IMX8MP_TOUCH_I2C {
 	clock-frequency = <400000>;
 	gpio_adp: pca9634@61 {
-			compatible = "nxp,pca9634";
+			compatible = "fus,pca9634";
 			reg = <0x61>;
 			vdd-supply = <&reg_vlcd>;
 			#address-cells = <1>;
