--- a/arch/arm/boot/dts/picocoremx6ul100.dts
+++ b/arch/arm/boot/dts/picocoremx6ul100.dts
@@ -828,13 +828,12 @@ wvga {					\
 				type = "LED";
 				active-low;
 		};
-		led@7 {
-				reg = <7>;
-				label = "TOUCH_ON";
-				type = "GPIO";
-				active-high;
-				default-on;
-		};
+        led@7 {
+                reg = <7>;
+                label = "7-doNotUse";
+                type = "LED";
+                active-low;
+        };
     };
 #endif	/* DISPLAY_LVDS_BT070L1060CS0I1ADA */
 
