--- a/arch/arm64/boot/dts/F+S/displays/imx8mm-tc358775-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mm-tc358775-BT070L1060CS0I1AD-A.dtsi
@@ -163,10 +163,9 @@
                         };
                         led@7 {
                                 reg = <7>;
-                                label = "TOUCH_ON";
-                                type = "GPIO";
-                                active-high;
-                                default-on;
+                                label = "7-doNotUse";
+                                type = "LED";
+                                active-low;
                         };
                 };
 
