--- a/arch/arm64/boot/dts/F+S/displays/imx8mp-EE1010B1T-1CP.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mp-EE1010B1T-1CP.dtsi
@@ -133,13 +133,12 @@
 				type = "LED";
 				active-low;
 			};
-			led@7 {
-				reg = <7>;
-				label = "TOUCH_ON";
-				type = "GPIO";
-				active-high;
-				default-on;
-			};
+            led@7 {
+                    reg = <7>;
+                    label = "7-doNotUse";
+                    type = "LED";
+                    active-low;
+            };
 		};
         /* GOODIX PCAP touch on Touch-Connector (I2C) */
         touch: gt928@14 {
