Set LED7 for F&S displays to unused on fsimx93/8ulp
The TOUCH_ON functionality is not implemented and the LED7 of the PCA is
used to keep the display off when not configured.
ATTENTION: Keep this pin reserved for this function!

--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtsi
@@ -224,10 +224,9 @@
 		};
 		led@7 {
 			reg = <7>;
-			label = "TOUCH_ON";
-			type = "GPIO";
-			active-high;
-			default-on;
+			label = "7-doNotUse";
+			type = "LED";
+			active-low;
 		};
 	};
 
