Add hysteresis for touch interrupt on ADP-OSM-BB
The normal CMOS input is not sufficient for the Ilitek touch. Add
hysteresis on the interrupt pin to stabilize the touch behaviour.

--- a/arch/arm64/boot/dts/F+S/displays/imx8mm-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mm-BT070L1060CS0I1AD-A.dtsi
@@ -119,5 +119,9 @@
                 interrupt-parent = <&IMX8MM_TOUCH_INTERRUPT_GPIO_BANK>;
                 interrupts = <IMX8MM_TOUCH_INTERRUPT_GPIO_NUM IRQ_TYPE_EDGE_FALLING>;
                 reset-gpios = <&pca963x 5 GPIO_ACTIVE_LOW>;
+#ifdef IMX8MM_TOUCH_INTERRUPT_PINCTRL
+                pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_touch_int>;
+#endif
         };
 };
