--- a/arch/arm64/boot/dts/F+S/osm8mm-lcdif-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dts
+++ b/arch/arm64/boot/dts/F+S/osm8mm-lcdif-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dts
@@ -11,6 +11,7 @@
 
 #define IMX8MM_TOUCH_INTERRUPT_GPIO_BANK	gpio1
 #define IMX8MM_TOUCH_INTERRUPT_GPIO_NUM		5
+#define IMX8MM_TOUCH_INTERRUPT_PINCTRL
 
 #define IMX8MM_LVDS_I2C osm_i2c_cam_pci
 #define IMX8MM_TOUCH_I2C osm_i2c_cam_pci
